--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -10,11 +10,12 @@
         <span class="icon-bar"></span>
       </button>
       <!-- IMG BASED LOGO  -->
-      <a class="navbar-brand" href="{{ "/index.html" | absolute_url }}" ><img class="lazyload" data-src="/assets/img/logoonly.webp" style="height:50px;width:60px;display:inline" alt="logo"><span itemprop="publisher" itemscope itemtype="http://schema.org/Organization"><span itemprop="name">Oktapath</span></span></a> 
+      <a class="navbar-brand" href="{{ "/" | absolute_url }}" ><img class="lazyload" data-src="/assets/img/logoonly.webp" style="height:50px;width:60px;display:inline" alt="logo"><span itemprop="publisher" itemscope itemtype="http://schema.org/Organization"><span itemprop="name">Oktapath</span></span></a> 
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul id="top-menu" class="nav navbar-nav navbar-right main-nav">
-        <li class="active"><a href="{{ "/index.html" | absolute_url }}" alt="home page">Home</a></li>            
+        <li class="active"><a href="{{ "/" | relative_url }}" alt="home page">Home</a></li>   
+        <li class="active"><a href="{{ "/about/" | relative_url }}" alt="home page">About</a></li>         
       </ul>                     
     </div><!--/.nav-collapse -->        
   </div>     
