cleaned assests folder and footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,39 +6,15 @@
           <div class="container">
             <div class="mu-footer-top-area">
               <div class="row">
-                <div class="col-lg-4 col-md-4 col-sm-4">
-                  <div class="mu-footer-widget">
-                    <h4>Information</h4>
-                    <ul>
-                      <li><a href="{{ "/aboutus.html" | absolute_url }}">About Us</a></li>
-                      <li><a href="{{ "/sitemap.xml"| absolute_url }}">Sitemap</a></li>
-                      <li><a href="#">Term Of Use</a></li>
-                    </ul>
-                  </div>
-                </div>
-                <div class="col-lg-4 col-md-4 col-sm-4">
+                <div class="col-lg-12 col-md-12 col-sm-12">
                   <div class="mu-footer-widget">
                     <h4>Help</h4>
                     <ul>
-                      <li><a href="{{ "/legal/privacypolicy.html" | absolute_url }}">Privacy Policy</a></li>
-                      <li><a href="{{ "/legal/cookiepolicy.html" | absolute_url }}">Cookie Policy</a></li>
-                      <li><a href="{{ "/legal/privacynotice.html" | absolute_url }}">Privacy Notice</a></li>
-                      <li><a href="{{ "/legal/privacypolicy.html" | absolute_url }}">Privacy Policy</a></li>
+                      <li style="display:inline;padding-left:10px;"><a href="{{ "/legal/privacypolicy.html" | absolute_url }}">Privacy Policy</a></li>
+                      <li style="display:inline;padding-left:10px;"><a href="{{ "/legal/cookiepolicy.html" | absolute_url }}">Cookie Policy</a></li>
+                      <li style="display:inline;padding-left:10px;"><a href="{{ "/legal/privacynotice.html" | absolute_url }}">Privacy Notice</a></li>
+                      <li style="display:inline;padding-left:10px;"><a href="{{ "/legal/cookie.html" | absolute_url }}">Privacy Policy</a></li>
                     </ul>
-                  </div>
-                </div>
-                <div class="col-lg-4 col-md-4 col-sm-4">
-                  <div class="mu-footer-widget">
-                    <h4>Contact</h4>
-                    <address>
-                      <p>4 Cabinteely Close, Dublin 18, Ireland</p>
-                      <p>Phone: +353 (0)976306468 </p>
-                      <p>Website: oktapath.com</p>
-                      <p>Email: info@oktapath.com</p>
-                    </address>
-                  </div>
-                  <div>
-                    <span id="siteseal"><script async type="text/javascript" src="https://seal.godaddy.com/getSeal?sealID=9srC7AKhwlu4i0CRxieWcPyOJ95XG4um11n0W5g6VAn9XClGazLu0RPkLpQQ"></script></span>
                   </div>
                 </div>
               </div>
