--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,55 +8,14 @@
               <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12">
                   <div class="mu-footer-widget">
-                    <h4>Help</h4>
                     <ul>
                       <li style="display:inline;padding-left:10px;"><a href="{{ "/legal/privacypolicy.html" | absolute_url }}">Privacy Policy</a></li>
+                      <li style="display:inline;padding-left:10px;"><a href="{{ "/legal/privacynotice.html" | absolute_url }}">Privacy Notice</a></li>                    
                       <li style="display:inline;padding-left:10px;"><a href="{{ "/legal/cookiepolicy.html" | absolute_url }}">Cookie Policy</a></li>
-                      <li style="display:inline;padding-left:10px;"><a href="{{ "/legal/privacynotice.html" | absolute_url }}">Privacy Notice</a></li>
-                      <li style="display:inline;padding-left:10px;"><a href="{{ "/legal/cookie.html" | absolute_url }}">Privacy Policy</a></li>
+                      <li style="display:inline;padding-left:10px;"><a href="{{ "/legal/cookie.html" | absolute_url }}">Cookies</a></li>
                     </ul>
                   </div>
                 </div>
               </div>
             </div>
-    
-  </footer>
-<!-- End footer -->
-
-<!-- 
-<footer class="site-footer h-card">
-  <data class="u-url" href="{{ "/" | relative_url }}"></data>
-
-  <div class="wrapper">
-
-    <h2 class="footer-heading">{{ site.title | escape }}</h2>
-
-    <div class="footer-col-wrapper">
-      <div class="footer-col footer-col-1">
-        <ul class="contact-list">
-          <li class="p-name">
-            {%- if site.author -%}
-              {{ site.author | escape }}
-            {%- else -%}
-              {{ site.title | escape }}
-            {%- endif -%}
-            </li>
-            {%- if site.email -%}
-            <li><a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a></li>
-            {%- endif -%}
-        </ul>
-      </div>
-
-      <div class="footer-col footer-col-2">
-        {%- include social.html -%}
-      </div>
-
-      <div class="footer-col footer-col-3">
-        <p>{{- site.description | escape -}}</p>
-      </div>
-    </div>
-
-  </div>
-<h1>hugh is mad</h1>
-</footer>
- -->
+      </footer>
