fixed navigation styling

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,6 +23,8 @@
                     <li><a rel="noreferrer" href="https://www.facebook.com/Oktapath-113306820474516" target="_blank"><span class="fa fa-facebook"></span></a></li>
                     <li><a href="https://twitter.com/oktapath" rel="noreferrer" target="_blank"><span class="fa fa-twitter"></span></a></li>
                     <li><a href="https://www.linkedin.com/company/oktapath" rel="noreferrer" target="_blank"><span class="fa fa-linkedin"></span></a></li>
+                    <li><a rel="noreferrer" href="https://github.com/oktapath" target="_blank"><span class="fa fa-github"></span></a></li>
+                    <li><a rel="noreferrer" href="https://blog.oktapath.com" target="_blank"><span class="fa fa-blog"></span></a></li>
                     <li><a rel="noreferrer" href="https://www.github.com/oktapath" target="_blank"><span class="fa fa-github"></span></a></li>
                   </ul>
                 </nav>
