--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -15,7 +15,7 @@
     <div id="navbar" class="navbar-collapse collapse">
       <ul id="top-menu" class="nav navbar-nav navbar-right main-nav">
         <li><a href="{{ "/" | relative_url }}" alt="home page">Home</a></li>
-        <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" alt="posts">Posts<span class="fa fa-angle-down"></span></a>
+        <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" alt="posts">Posts<span class="fa fa-angle-down" style="padding-left:5px;"></span></a>
         <ul class="dropdown-menu" role="menu">
           {% for post in site.posts %}
             <li>
